--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -23,8 +23,8 @@
 }
 
 .eventText{
-font-weight: 300;
-font-size: 15px;
+    font-weight: 300;
+    font-size: 15px;
 
 }
 
@@ -39,10 +39,53 @@ font-size: 15px;
     margin-bottom: 20px;
 }
 
+.rightbarInfoKey{
+    font-weight: 500;
+    margin-right: 15px;
+    color: gray;
+}
+
+.rightbarInfoValue{
+    font-weight: 300;
+}
+
+
 .rightbarFriendList{
     padding: 0;
     margin: 0;
     list-style: none;
-
 }
 
+.rightbarTitle{
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.rightbarInfo{
+    margin-bottom: 30px;
+}
+
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+
+.rightbarFollowings{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rightbarFollowing{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.rightbarFollowingImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+
+}
