--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -68,9 +68,27 @@
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: green;
+    background-color: goldenrod;
     font-weight: 500;
     margin-right: 20px;
     cursor: pointer;
-    color: white;
+    color: black;
+}
+
+.shareImgContainer{
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
+
+.shareImg{
+  width: 100%;
+  object-fit: cover;
+}
+
+.shareCancelImg{
+  position: absolute;
+  top: 0;
+  right: 20px;
+  cursor: pointer;
+  opacity: 0.7;
 }
