--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -77,6 +77,6 @@
 
 .postCommentText{
     cursor: pointer;
-    border-bottom: 1px dashed ;
+    border-bottom: 1px dashed gray;
     font-size: 15px;
 }
